Doc: Add createObject() approach to dynamically generating menu items

Fixes: QTBUG-108798
Change-Id: Ie8c8edfe00b11eca0082e89c864ec20cef8748e5
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 239082b5ad44adfe2711cd334da1a9d57dd79a6f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>